--- a/home.html
+++ b/home.html
@@ -1,59 +1,171 @@
-<div style={{width: 460, height: 912, background: '#444444'}}>
-  <div style={{width: 360, height: 800, left: 30, top: 43, position: 'absolute', background: 'white'}}>
-    <div style={{width: 360, height: 60, left: 0, top: -4, position: 'absolute'}}>
-      <div style={{width: 360, height: 56, left: 0, top: 4, position: 'absolute', background: 'rgba(255, 255, 255, 0.58)', boxShadow: '10px 10px 10px ', borderTopLeftRadius: 10, borderTopRightRadius: 10, border: '1px #F4EDED solid', filter: 'blur(10px)'}} />
-      <div style={{width: 31, height: 31, left: 309, top: 16, position: 'absolute'}}>
-        <div style={{width: 31, height: 31, left: 0, top: 0, position: 'absolute', background: 'white', boxShadow: '0px 2px 10px -3px rgba(255, 78, 0, 0.34)', borderRadius: 9999, border: '0.50px #F4EDED solid'}} />
-        <div style={{width: 24, height: 24, paddingTop: 2, paddingBottom: 3, paddingLeft: 3, paddingRight: 3, left: 4, top: 4, position: 'absolute', border: '1px #F4EDED solid', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-          <div style={{width: 18, height: 19, background: 'black'}}></div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Design</title>
+  <style>
+    body {
+      background-color: #444444;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      width: 360px;
+      height: 800px;
+      background: white;
+      position: relative;
+    }
+    .top-bar {
+      width: 360px;
+      height: 56px;
+      background: rgba(255, 255, 255, 0.58);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px 10px 0 0;
+      border: 1px solid #F4EDED;
+      filter: blur(10px);
+      position: absolute;
+      top: 4px;
+    }
+    .top-bar img {
+      width: 104px;
+      height: 52px;
+      position: absolute;
+      top: 4px;
+      left: 0;
+    }
+    .menu-item {
+      width: 31px;
+      height: 31px;
+      background: white;
+      box-shadow: 0px 2px 10px -3px rgba(255, 78, 0, 0.34);
+      border-radius: 50%;
+      border: 0.5px solid #F4EDED;
+      position: absolute;
+      top: 16px;
+    }
+    .menu-item img {
+      width: 18px;
+      height: 19px;
+      position: absolute;
+      top: 4px;
+      left: 4px;
+    }
+    .wifi-icon {
+      width: 24px;
+      height: 14px;
+      background: #E8EAED;
+      position: absolute;
+      top: 5px;
+      left: 165px;
+    }
+    .bottom-bar {
+      width: 360px;
+      height: 49px;
+      background: white;
+      position: absolute;
+      bottom: 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+    .bottom-bar .icon {
+      width: 20px;
+      height: 20px;
+      background: black;
+    }
+    .bottom-bar .label {
+      font-size: 10px;
+      font-family: 'Roboto', sans-serif;
+      color: black;
+      text-align: center;
+    }
+    .content-image {
+      width: 325px;
+      height: 184px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      position: absolute;
+      top: 308px;
+      left: 18px;
+    }
+    .content-image img {
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+    }
+    .gate-pass {
+      width: 319px;
+      height: 179px;
+      background: #D46D28;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      border: 1px solid black;
+      position: absolute;
+      top: 514px;
+      left: 21px;
+      text-align: center;
+      color: #D4C9C9;
+      font-size: 40px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 800;
+      line-height: 50px;
+    }
+    .gate-pass .qr {
+      width: 70px;
+      height: 70px;
+      background: #E8EAED;
+      margin: 17.5px auto;
+    }
+    .square {
+      width: 125px;
+      height: 126px;
+      background: #1E2022;
+      position: absolute;
+      top: 104px;
+      left: 109px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="top-bar">
+      <img src="https://via.placeholder.com/104x52" alt="Logo">
+      <div class="menu-item" style="left: 309px;">
+        <img src="https://via.placeholder.com/18x19" alt="Menu Icon">
       </div>
-      <div style={{width: 24, height: 24, paddingLeft: 1, paddingRight: 1, paddingTop: 5, paddingBottom: 5, left: 165, top: 0, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 22, height: 14, background: '#E8EAED'}}></div>
+      <div class="wifi-icon"></div>
+    </div>
+    <div class="bottom-bar">
+      <div>
+        <div class="icon"></div>
+        <div class="label">Home</div>
+      </div>
+      <div>
+        <div class="icon"></div>
+        <div class="label">Pass</div>
+      </div>
+      <div>
+        <div class="icon"></div>
+        <div class="label">Bus</div>
+      </div>
+      <div>
+        <div class="icon"></div>
+        <div class="label">Setting</div>
       </div>
     </div>
-    <div style={{width: 360, height: 49, left: 0, top: 751, position: 'absolute'}}>
-      <div style={{width: 360, height: 49, left: 0, top: 0, position: 'absolute', background: 'white'}} />
-      <div style={{width: 20, height: 49, left: 0, top: 0, position: 'absolute', background: '#FF4E00', boxShadow: '0px 2px 10px -3px #FF4E00', borderTopLeftRadius: 1, borderTopRightRadius: 5, borderBottomRightRadius: 1, borderBottomLeftRadius: 1, backdropFilter: 'blur(2px)'}} />
-      <div style={{width: 272, height: 49, left: 88, top: 0, position: 'absolute', background: '#FF4E00', boxShadow: '0px 2px 10px -3px #FF4E00', borderTopLeftRadius: 5, borderTopRightRadius: 1, borderBottomRightRadius: 1, borderBottomLeftRadius: 1}} />
-      <div style={{width: 20, height: 20, paddingTop: 2.50, paddingBottom: 2, paddingLeft: 2.47, paddingRight: 2.47, left: 44, top: 9, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 15.06, height: 15.50, background: 'black'}}></div>
-      </div>
-      <div style={{width: 56, height: 10, left: 26, top: 31, position: 'absolute', textAlign: 'center', color: 'black', fontSize: 10, fontFamily: 'Roboto', fontWeight: '400', wordWrap: 'break-word'}}>Home</div>
-      <div style={{width: 56, height: 10, left: 111, top: 31, position: 'absolute', textAlign: 'center', color: 'black', fontSize: 10, fontFamily: 'Roboto', fontWeight: '400', wordWrap: 'break-word'}}>Pass</div>
-      <div style={{width: 20, height: 20, padding: 3.33, left: 129, top: 11, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 13.33, height: 13.33, position: 'relative'}}>
-          <div style={{width: 13.33, height: 13.33, left: 0, top: 0, position: 'absolute', border: '2px black solid'}}></div>
-          <div style={{width: 4.58, height: 6.67, left: 3.33, top: 3.33, position: 'absolute', border: '2px black solid'}}></div>
-          <div style={{width: 0.01, height: 0, left: 10, top: 10, position: 'absolute', border: '2px black solid'}}></div>
-        </div>
-      </div>
-      <div style={{width: 56, height: 10, left: 196, top: 31, position: 'absolute', textAlign: 'center', color: 'black', fontSize: 10, fontFamily: 'Roboto', fontWeight: '400', wordWrap: 'break-word'}}>Bus</div>
-      <div style={{width: 20, height: 20, padding: 1.67, left: 214, top: 11, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 16.67, height: 16.67, background: 'black'}}></div>
-      </div>
-      <div style={{width: 56, height: 10, left: 281, top: 31, position: 'absolute', textAlign: 'center', color: 'black', fontSize: 10, fontFamily: 'Roboto', fontWeight: '400', wordWrap: 'break-word'}}>Setting</div>
-      <div style={{width: 20, height: 20, paddingTop: 1.27, paddingBottom: 1.25, paddingLeft: 1.73, paddingRight: 1.72, left: 299, top: 11, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 16.55, height: 17.48, background: 'black'}}></div>
-      </div>
+    <div class="content-image">
+      <img src="https://via.placeholder.com/325x184" alt="Content Image">
     </div>
-    <img style={{width: 104, height: 52, left: 0, top: 4, position: 'absolute'}} src="https://via.placeholder.com/104x52" />
-    <div style={{width: 325, height: 184, left: 18, top: 308, position: 'absolute'}}>
-      <img style={{width: 325, height: 184, left: 0, top: 0, position: 'absolute', boxShadow: '0px 4px 4px rgba(0, 0, 0, 0.25)', borderRadius: 20}} src="https://via.placeholder.com/325x184" />
-      <div style={{width: 169.45, height: 24, paddingLeft: 7.06, paddingRight: 7.06, paddingTop: 5, paddingBottom: 5, left: 5.60, top: 173.69, position: 'absolute', transform: 'rotate(-90.23deg)', transformOrigin: '0 0', borderRadius: 20, overflow: 'hidden', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 155.33, height: 14, background: '#E8EAED'}}></div>
-      </div>
+    <div class="gate-pass">
+      GATE PASS
+      <div class="qr"></div>
     </div>
-    <div style={{width: 319, height: 179, left: 21, top: 514, position: 'absolute'}}>
-      <div style={{width: 319, height: 179, left: 0, top: 0, position: 'absolute', background: '#D46D28', boxShadow: '0px 4px 4px rgba(0, 0, 0, 0.25)', borderRadius: 20, border: '1px black solid'}} />
-      <div style={{width: 247, height: 59, left: 47, top: 3, position: 'absolute', textAlign: 'center', color: '#D4C9C9', fontSize: 40, fontFamily: 'Inter', fontWeight: '800', lineHeight: 50, wordWrap: 'break-word'}}>GATE PASS</div>
-      <div style={{width: 155.33, height: 14, left: 10.62, top: 167.38, position: 'absolute', transform: 'rotate(-90.23deg)', transformOrigin: '0 0', background: '#E8EAED'}}></div>
-      <div style={{width: 0, height: 178.50, left: 31, top: 0, position: 'absolute', border: '3px #F9F4F4 solid'}}></div>
-      <div style={{width: 105, height: 105, padding: 17.50, left: 114, top: 62, position: 'absolute', justifyContent: 'center', alignItems: 'center', display: 'inline-flex'}}>
-        <div style={{width: 70, height: 70, background: '#E8EAED'}}></div>
-      </div>
-    </div>
-    <div style={{width: 125, height: 126, left: 109, top: 104, position: 'absolute', background: '#1E2022'}}></div>
+    <div class="square"></div>
   </div>
-  <div style={{width: 363, height: 689, left: 27, top: 101, position: 'absolute', borderRadius: 10}} />
-</div>
+</body>
+</html>
+
